# PES_2025

./: Tp1_Python_2025.ipynb
.ipynb_checkpoints/: TP0_PES-checkpoint.ipynb  Tp1_Python_2025-checkpoint.ipynb
Etapa 1/: Etapa 1 v1.ipynb  Etapa 1 v2.ipynb  Etapa 1 v3.ipynb  pip_freeze.txt
Etapa 1/.ipynb_checkpoints/: Etapa 1 v1-checkpoint.ipynb
Etapa 2/: Codigo Raspberry.py  Codigo_PC.py  Compilar_MicroPython_ulab_fft.md  Firmware_ulab.uf2  sh1106.py
Etapa 2/Codigo C/: CMakeLists.txt  fft.c  fft.h  font5x7.inc  main.c  sh1106.c  sh1106.h
